--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8080
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/toll_stock?serverTimezone=UTC&useUnicode=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=dota21kmmr
+spring.liquibase.url=jdbc:mysql://localhost:3306/toll_stock?serverTimezone=UTC&useUnicode=true
+spring.liquibase.user=root
+spring.liquibase.password=dota21kmmr
